[gd_scene load_steps=21 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/robot_demo.png" type="Texture" id=2]
[ext_resource path="res://audio/sound_jump.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sound_shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://player/osb_left.png" type="Texture" id=5]
[ext_resource path="res://player/osb_right.png" type="Texture" id=6]
[ext_resource path="res://player/osb_jump.png" type="Texture" id=7]
[ext_resource path="res://player/osb_fire.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "crouch"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=2]
resource_name = "falling"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=3]
resource_name = "falling_weapon"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=4]
length = 7.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 16, 19, 20, 19, 16 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=8]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="Animation" id=9]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="CapsuleShape2D" id=11]
height = 47.6929

[sub_resource type="CapsuleShape2D" id=12]
radius = 14.5701
height = 35.66

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
hframes = 16
frame = 22

[node name="Smoke" type="Node2D" parent="Sprite"]
position = Vector2( 18.5908, -0.355532 )
rotation = -1.45648

[node name="BulletShoot" type="Position2D" parent="Sprite"]
position = Vector2( 30.3375, 5.50484 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/crouch = SubResource( 1 )
anims/falling = SubResource( 2 )
anims/falling_weapon = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/idle_weapon = SubResource( 5 )
anims/jumping = SubResource( 6 )
anims/jumping_weapon = SubResource( 7 )
anims/run = SubResource( 8 )
anims/run_weapon = SubResource( 9 )
anims/standing_weapon_ready = SubResource( 10 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 377.73, 84.6865 )
current = true
process_mode = 0
limit_left = 0
limit_top = -150
limit_right = 900
limit_bottom = 800

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.55264, 2.32722 )
shape = SubResource( 11 )

[node name="SoundJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="SoundShoot" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 5.27423, 3.51617 )
stream = ExtResource( 4 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="Left" type="TouchScreenButton" parent="UI"]
position = Vector2( 2.69982, 372.039 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 5 )
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="UI"]
position = Vector2( 108.01, 374.16 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 6 )
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="BottomRightAnchor" type="Control" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="TouchScreenButton" parent="UI/BottomRightAnchor"]
position = Vector2( -77.015, -152.62 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 7 )
action = "jump"
visibility_mode = 1

[node name="Fire" type="TouchScreenButton" parent="UI/BottomRightAnchor"]
position = Vector2( -186.372, -62.9118 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 8 )
action = "shoot"
visibility_mode = 1

[node name="Down" type="TouchScreenButton" parent="UI/BottomRightAnchor"]
position = Vector2( 17.4562, 33.3964 )
rotation = 3.14159
scale = Vector2( 1.49342, 1.45599 )
normal = ExtResource( 7 )
visibility_mode = 1

[node name="ScoreTitle" type="Label" parent="UI"]
margin_left = 29.0
margin_top = 19.0018
margin_right = 104.0
margin_bottom = 45.0018
text = "SCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_left = 81.0
margin_top = 19.0
margin_right = 137.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyCollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollider"]
position = Vector2( -2.89871, 3.42575 )
shape = SubResource( 12 )
[connection signal="body_entered" from="EnemyCollider" to="." method="_on_EnemyCollider_body_entered"]
